# KHealth

./: .gitignore  README.md  V2_Perm_Clean.txt  V2_Perm_Processed.csv  auto-calibration.py  bluetooth.ino  glucose_data.py  glucose_time_data.csv  grapher.py  main.py  model_train.csv  model_training.py  perm_data.ipynb  test.py  test_screen.py  usb_cdc.c  usb_cdc_example_main.c  user_interface.ui  xgb_model.dart  xgb_model.h
LCD Gui/: grapher.py
Old GUI/: glucose_time_data.csv
android_app/: .gitignore  pubspec.yaml
android_app/android/app/: build.gradle
android_app/android/app/src/main/: AndroidManifest.xml
android_app/android/app/src/main/cpp/: CMakeLists.txt  native_code.c
android_app/lib/: bluetooth.py  main.dart
android_app/lib/screens/: bluetooth_screen.dart  button_screen.dart  data_screen.dart  home_screen.dart  loading_screen.dart  recent_readings_screen.dart
android_app/lib/services/: ble_data_receiver.dart  bluetooth_manager.dart  file_storage.dart
android_app/lib/widgets/: line_chart_widget.dart
android_app/macos/Flutter/: GeneratedPluginRegistrant.swift
